# net-ebook

./: .buildinfo  .gitignore  Intro Python.ipynb  Makefile  Pipfile  README.html  README.md  TODO  _config.yml  _toc.yml  genindex.html  glosario.md  intro.html  intro_python.html  intro_python.ipynb  objects.inv  paquetes.html  pyproject.toml  python.html  python.ipynb  raw-sockets.html  raw-sockets.md  redes.md  search.html  searchindex.js  serializacion.html  serializacion.ipynb  shell.html  shell.md  ssh.html  ssh.md  syntax.md  udp_chat.html  udp_chat.ipynb
.github/workflows/: publish.yaml  test.yaml
_sources/: README.md  intro.md  paquetes.md  python.ipynb  raw-sockets.md  serializacion.ipynb  shell.md  udp_chat.md
code/ssh-docker/: README.html
src/udp-chat/: chat.py  client1.py  client2.py  client3.py  client4.py  server1.py  server2.py  server3.py  server4.py
