[tool.poetry]
name = "net-book"
version = "0.1.0"
description = ""
authors = ["David Villa Alises <david.villa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^0.15.1"
matplotlib = "^3.8.0"
numpy = "1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
